--- a/Index.html
+++ b/Index.html
@@ -34,7 +34,7 @@
                 <video autoplay="" muted="" loop="" id="myVideo">
                     <source src="https://navanapharma.com/vdo.mp4" type="video/mp4">
                         </video>
-                <!-- <img src="/navana.jpg" alt="#" height="680px" width="650px"> -->
+                <img src="/navana.jpg" alt="#" height="680px" width="650px">
             </div>
         </div>
 
